# DailyWork

./: .gitignore  README.md  requirements.txt
LinuxShell/: README.md
LinuxShell/Visualization/: README.md  style_terminal.sh
ROS2/Example/image_shm_demo/: CMakeLists.txt  package.xml
ROS2/Example/image_shm_demo/config/: fastdds_shm_profile.xml
ROS2/Example/image_shm_demo/launch/: pub_launch.py  pub_sub_launch.py  sub_launch.py
ROS2/Example/image_shm_demo/msg/: ImageData.msg
ROS2/Example/image_shm_demo/src/: image_pub_component.cpp  image_sub_component.cpp
Utils/: README.md
Utils/AlgorithmTool/: README.md  YoloAnchorKmeans.py
Utils/DataFormat/: README.md
Utils/DataFormat/JointMultiTask/: CA_MultiTask_Process.py  README.md
Utils/DataFormat/Object/: BDD2YOLO.py  BSTLD2YOLO.py  CATrafficLight2YOLO.py  COCO2YOLO.py  LabelMe2YOLO.py  README.md  TT100k2YOLO.PY  VOC2YOLO.py
Utils/DataFormat/Object/Caltech Pedestrian Detection/: CPD2Image.py  CPD2YOLO.py
Utils/ScriptTool/: BatchRename.py  BatchVideoResample.py  ObjectImageWeightSample.py  README.md  SplitTrainValDataset.py
Utils/ScriptTool/CA/: BatchCopy.py  README.md
Utils/SensorCalibration/: README.md
Utils/SensorCalibration/Visualization/: README.md  image_project.py
Utils/SensorCalibration/Visualization/example/: calibration_raw.pcd  intrinsics.yml  lidar2img_extrinsics.yml
Utils/Visualization/: BDD100K_label.py  README.md  object_bbox.py  semantics_color.py
